k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-weather-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vue-weather.com
    secretName: vue-weather-tls
  rules:
  - host: vue-weather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-weather-service
            port:
              number: 80
